<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guess my Number</string>
    <string name="action_settings">Settings</string>
    <string name="guess_hint">1, 2, 3...</string>
    <string name="guess_text">Enter Here:</string>
    <string name="cb_show">Show Answer</string>
    <string name="guess_btn">Guess</string>
    <string name="guess_again_btn">Guess Again</string>
    <string name="guess_tagline">I am thinking of a number...</string>
    <string name="guess_tagline_cont">between</string>
    <string name="action_about">About</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="tv_about_body">Thanks for choosing this imherolddev production!</string>
    <string name="min_max_pref">Set the Minimum and Maximum values</string>
    <string name="min_max_pref_key">Min/Max</string>
    <string name="et_min_pref">Enter the Minimum value</string>
    <string name="et_max_pref">Enter the Maximum value</string>
    <string name="min_pref_title">Minimum</string>
    <string name="max_pref_title">Maximum</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>

    <string-array name="difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Custom</item>
    </string-array>

    <string name="difficulty_dialog_title">Select your difficulty level</string>
    <string name="zero">0</string>
    <string name="hundred">100</string>
    <string name="game_settings">Game Settings</string>
    <string name="pref_min_key">min</string>
    <string name="pref_max_key">max</string>
    <string name="pref_diff_key">difficulty</string>
    <string name="difficulty_default">Easy</string>
    <string name="diff_summary">Select a pre-defined difficulty setting</string>
    <string name="btn_return">Return</string>
    <string name="min_pref_summary">Choose the minimum value</string>
    <string name="max_pref_summary">Choose the maximum value</string>
    <string name="twentyFive">25</string>
    <string name="fifty">50</string>
    <string name="pref_is_guessed">isGuessed</string>
    <string name="pref_num_guesses">numGuesses</string>
    <string name="and">and</string>
    <string name="min_difference">5</string>
    <string name="high">too high</string>
    <string name="low">too low</string>
    <string name="correct">correct!!!</string>
    <string name="toast_guess">Your guess is</string>
    <string name="guesses">guesses</string>
    <string name="no_number">Please enter a number to make a guess!</string>
    <string name="signature">by Jason Hall - imherolddev</string>
    <string name="number_key">number</string>
    <string name="warn_low">Maximum must be higher than minimum</string>
    <string name="warn_high">Minimum must be lower than maximum</string>
    <string name="warn_diff">Maximum must be 5 more than the minimum</string>
    <string name="isCustom">custom</string>

</resources>