<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:summary="@string/game_settings"
    android:title="@string/game_settings" >

    <EditTextPreference
        android:defaultValue="@string/zero"
        android:dialogMessage="@string/et_min_pref"
        android:dialogTitle="@string/min_pref_title"
        android:inputType="number"
        android:key="@string/pref_min_key"
        android:maxLength="3"
        android:summary="@string/min_pref_summary"
        android:title="@string/min_pref_title" android:enabled="false"/>
    <EditTextPreference
        android:defaultValue="@string/hundred"
        android:dialogMessage="@string/et_max_pref"
        android:dialogTitle="@string/max_pref_title"
        android:inputType="number"
        android:key="@string/pref_max_key"
        android:maxLength="3"
        android:summary="@string/max_pref_summary"
        android:title="@string/max_pref_title" android:enabled="false"/>

    <ListPreference
        android:defaultValue="none"
        android:entries="@array/difficulty"
        android:entryValues="@array/difficulty"
        android:key="@string/pref_diff_key"
        android:persistent="true"
        android:summary="@string/diff_summary"
        android:title="@string/difficulty_dialog_title" />

</PreferenceScreen>