<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.imherolddev.guessmynumber.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/et_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="5"
        android:hint="@string/guess_hint"
        android:inputType="number"
        android:textSize="@dimen/text_size"
        android:maxLength="3" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_guess"
        android:layout_alignLeft="@+id/et_guess"
        android:text="@string/guess_text"
        android:textSize="@dimen/text_size_small" />

    <CheckBox
        android:id="@+id/cb_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/et_guess"
        android:layout_below="@+id/et_guess"
        android:onClick="showAnswer"
        android:text="@string/cb_show"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/tv_guess_tagline_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_guess"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/guess_tagline_cont"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/tv_guess_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_guess_tagline_cont"
        android:layout_centerHorizontal="true"
        android:text="@string/guess_tagline"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/btn_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tv_guess_tagline"
        android:layout_below="@+id/cb_show"
        android:layout_marginTop="20dp"
        android:onClick="compareGuess"
        android:text="@string/guess_btn" />

</RelativeLayout>
